Add delete endpoint
