# golang/internal/docs/swagger.json
@@ -220,6 +220,38 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "like"
+                ],
+                "summary": "いいね数の削除",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Article ID",
+                        "name": "article_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.Message"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.Message"
+                        }
+                    }
+                }
             }
         },
         "/swagger": {
@@ -250,7 +282,7 @@
                     "type": "string"
                 },
                 "likes": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "stepCount": {
                     "type": "integer"
@@ -269,10 +301,10 @@
         "server.Code": {
             "type": "object",
             "properties": {
-                "code_content": {
+                "codeContent": {
                     "type": "string"
                 },
-                "code_file_name": {
+                "codeFileName": {
                     "type": "string"
                 }
             }
